--- a/views/home/header_section.ejs
+++ b/views/home/header_section.ejs
@@ -25,39 +25,39 @@
                                     <ul class="mega-menu">
                                         <li class="mega-menu-col">
                                             <ul class="m-b-n10">
-                                                <li><a href="#">Hệ thống nhà hàng phố 79</a></li>
-                                                <li><a href="#">Chuỗi Ân Nam Quán</a></li>
-                                                <li><a href="#">Nhà hàng sườn nướng Hàn Quốc</a></li>
-                                                <li><a href="#">Chuỗi Lẫu Cua Đất Mũi</a></li>
-                                                <li><a href="#">Nhà hàng EON 51</a></li>
+                                                <li><a href="/home/restaurants/63eed27b029d15940f1ad439">Hệ thống nhà hàng phố 79</a></li>
+                                                <li><a href="/home/restaurants/63eed27b029d15940f1ad43a">Chuỗi Ân Nam Quán</a></li>
+                                                <li><a href="/home/restaurants/63eed27b029d15940f1ad43b">Nhà hàng sườn nướng Hàn Quốc</a></li>
+                                                <li><a href="/home/restaurants/63eed27b029d15940f1ad43c">Chuỗi Lẫu Cua Đất Mũi</a></li>
+                                                <li><a href="/home/restaurants/63eed27b029d15940f1ad440">Nhà hàng EON 51</a></li>
                                             </ul>
                                         </li>
                                         <li class="mega-menu-col">
                                             <ul class="m-b-n10">
-                                                <li><a href="#">Nhà hàng Út Cà Mau</a></li>
-                                                <li><a href="#">Buffet Hoàng Yến</a></li>
-                                                <li><a href="#">Hàng Dương Quán</a></li>
-                                                <li><a href="#">Nhà hàng Gạo</a></li>
-                                                <li><a href="#">Chuỗi King BBQ - Vua nướng Korea</a></li>
+                                                <li><a href="/home/restaurants/63eed27b029d15940f1ad442">Nhà hàng Út Cà Mau</a></li>
+                                                <li><a href="/home/restaurants/63eed27b029d15940f1ad443">Buffet Hoàng Yến</a></li>
+                                                <li><a href="/home/restaurants/63eed27b029d15940f1ad444">Hàng Dương Quán</a></li>
+                                                <li><a href="/home/restaurants/63eed27b029d15940f1ad445">Nhà hàng Gạo</a></li>
+                                                <li><a href="/home/restaurants/63eed27b029d15940f1ad446">Chuỗi King BBQ - Vua nướng Korea</a></li>
                                             </ul>
                                         </li>
                                         <li class="mega-menu-col">
                                             <ul class="m-b-n10">
-                                                <li><a href="#">Soa soa</a></li>
-                                                <li><a href="#">Quê nhà</a></li>
-                                                <li><a href="#">Red Chilli Sea Food</a></li>
-                                                <li><a href="#">Chuỗi San Fu Lou</a></li>
-                                                <li><a href="#">Chuỗi Dìn Kí</a></li>
+                                                <li><a href="/home/restaurants/63eed27b029d15940f1ad447">Soa soa</a></li>
+                                                <li><a href="/home/restaurants/63eed27b029d15940f1ad448">Quê nhà</a></li>
+                                                <li><a href="/home/restaurants/63eed27b029d15940f1ad449">Red Chilli Sea Food</a></li>
+                                                <li><a href="/home/restaurants/63eed27b029d15940f1ad43e">Chuỗi San Fu Lou</a></li>
+                                                <li><a href="/home/restaurants/63eed27b029d15940f1ad43f">Chuỗi Dìn Kí</a></li>
                                                
                                             </ul>
                                         </li>
                                         <li class="mega-menu-col">
                                             <ul class="m-b-n10">
-                                                <li><a href="#">Soa soa</a></li>
-                                                <li><a href="#">Quê nhà</a></li>
-                                                <li><a href="#">Red Chilli Sea Food</a></li>
-                                                <li><a href="#">Chuỗi San Fu Lou</a></li>
-                                                <li><a href="#">Chuỗi Dìn Kí</a></li>
+                                                <li><a href="/home/restaurants/63eed27b029d15940f1ad44c">Nhà hàng Hội Ngộ</a></li>
+                                                <li><a href="/home/restaurants/63eed27b029d15940f1ad44d">Nhà hàng Pachi Pachi</a></li>
+                                                <li><a href="/home/restaurants/63eed27b029d15940f1ad44a">Tajmasago Castle Buffet</a></li>
+                                                <li><a href="/home/restaurants/63eed27b029d15940f1ad43d">Chuỗi Wrap & Roll</a></li>
+                                                <li><a href="/home/restaurants/63eed27b029d15940f1ad441">Chuỗi Ngọc Sương Sài Gòn</a></li>
                                                
                                             </ul>
                                         </li>
