--- a/views/manager/managermentIndex.ejs
+++ b/views/manager/managermentIndex.ejs
@@ -43,7 +43,7 @@
 				</div>
 			</div>
 			<!--navigation-->
-			<%- include('navigation.ejs') -%>
+			<%- include('navigation.ejs', {id: id}) -%>
 			<!--end navigation-->
 		</div>
 		<!--end sidebar wrapper -->
@@ -390,9 +390,9 @@
 					</div>
 					<div class="user-box dropdown">
 						<a class="d-flex align-items-center nav-link dropdown-toggle dropdown-toggle-nocaret" href="#" role="button" data-bs-toggle="dropdown" aria-expanded="false">
-							<img src="/assets/images/avatars/avatar-2.png" class="user-img" alt="user avatar">
+							<img src="/assets/images/avatars/avatar_2.jpg" class="user-img" alt="user avatar">
 							<div class="user-info ps-3">
-								<p class="user-name mb-0">Pauline Seitz</p>
+								<p class="user-name mb-0">Anh Thư</p>
 								<p class="designattion mb-0">Web Designer</p>
 							</div>
 						</a>
@@ -492,7 +492,7 @@
 					</div>
 				</div><!--end row-->
 				
-				<div class="card radius-10">
+				<!-- <div class="card radius-10">
 					<div class="card-header border-bottom-0 bg-transparent">
 						<div class="d-lg-flex align-items-center">
 							<div>
@@ -515,8 +515,8 @@
 					<div class="card-body">
 						<div id="chart1"></div>
 					</div>
-				</div>
-				<div class="row">
+				</div> -->
+				<!-- <div class="row">
 					<div class="col-12 col-lg-8">
 						<div class="card radius-10">
 							
@@ -577,9 +577,9 @@
 							</div>
 						</div>
 					</div>
-				</div>
+				</div> -->
 				<!--end row-->
-				<div class="row">
+				<!-- <div class="row">
 					<div class="col-12 col-lg-6 d-flex">
 						<div class="card radius-10 w-100">
 							<div class="card-body">
@@ -651,10 +651,10 @@
 							</div>
 						</div>
 					</div>
-				</div>
+				</div> -->
 				<!--end row-->
 
-				<div class="row row-cols-1 row-cols-lg-3">
+				<!-- <div class="row row-cols-1 row-cols-lg-3">
                    <div class="col d-flex">
 					<div class="card radius-10 w-100">
 						<div class="card-body">
@@ -982,10 +982,10 @@
 						
 					</div>
 				   </div>
-				</div>
+				</div> -->
 				<!--end row-->
 
-				<div class="card radius-10">
+				<!-- <div class="card radius-10">
 					<div class="card-header border-bottom-0 bg-transparent">
 						<div class="d-flex align-items-center">
 							<div>
@@ -1105,7 +1105,7 @@
 							</table>
 						</div>
 					</div>
-				</div>
+				</div> -->
 			</div>
 		</div>
 		<!--end page wrapper -->
@@ -1115,7 +1115,7 @@
 		<!--Start Back To Top Button--> <a href="javaScript:;" class="back-to-top"><i class='bx bxs-up-arrow-alt'></i></a>
 		<!--End Back To Top Button-->
 		<footer class="page-footer">
-			<p class="mb-0">Copyright © 2021. All right reserved.</p>
+			<p class="mb-0">Copyright © 2023. All right reserved.</p>
 		</footer>
 	</div>
 	<!--end wrapper-->
