--- a/views/manager/navigation.ejs
+++ b/views/manager/navigation.ejs
@@ -1,6 +1,6 @@
 <ul class="metismenu" id="menu">
     <li>
-        <a href="javascript:;" class="has-arrow">
+        <a href="/manager/<%- id -%>" class="has-arrow">
             <div class="parent-icon"><i class='bx bx-home'></i>
             </div>
             <div class="menu-title">Dashboard</div>
@@ -9,21 +9,21 @@
     <li>
     </li>
     <li>
-        <a href="javascript:;" class="has-arrow" href="/order">
+        <a class="has-arrow" href="/manager/order/<%- id -%>">
             <div class="parent-icon"><i class='bx bx-briefcase-alt-2'></i>
             </div>
             <div class="menu-title">Quản lý đơn hàng</div>
         </a>
     </li>
     <li>
-        <a href="javascript:;" class="has-arrow">
+        <a href="/manager/reserveTable/<%- id -%>" class="has-arrow">
             <div class="parent-icon"><i class='bx bx-cart-alt' ></i>
             </div>
             <div class="menu-title">Quản lý đặt bàn</div>
         </a>
     </li>
     <li>
-        <a class="has-arrow" href="javascript:;">
+        <a class="has-arrow" href="/manager/customer/<%- id -%>">
             <div class="parent-icon"><i class='bx bx-gift'></i>
             </div>
             <div class="menu-title">Quản lý khách hàng</div>
@@ -31,7 +31,7 @@
         
     </li>
     <li>
-        <a class="has-arrow" href="javascript:;">
+        <a class="has-arrow" href="/manager/food/<%- id -%>">
             <div class="parent-icon"><i class='bx bx-gift'></i>
             </div>
             <div class="menu-title">Quản lý món ăn</div>
@@ -39,31 +39,31 @@
         
     </li>
     <li>
-        <a class="has-arrow" href="javascript:;">
+        <a class="has-arrow" href="/manager/ingredient/<%- id -%>">
             <div class="parent-icon"><i class='bx bx-command' ></i>
             </div>
             <div class="menu-title">Quản lý nguyên liệu</div>
         </a>
     </li>
     <li>
-        <a class="has-arrow" href="javascript:;">
+        <a class="has-arrow" href="/manager/table/<%- id -%>">
             <div class="parent-icon"> <i class='bx bx-atom'></i>
             </div>
             <div class="menu-title">Quản lý bàn</div>
         </a>
     </li>
     <li>
-        <a class="has-arrow" href="javascript:;">
+        <a class="has-arrow" href="/manager/party/<%- id -%>">
             <div class="parent-icon"><i class='bx bx-hourglass' ></i>
             </div>
             <div class="menu-title">Quản lý loại tiệc</div>
         </a>
     </li>
     <li>
-        <a class="has-arrow" href="javascript:;">
+        <!-- <a class="has-arrow" href="">
             <div class="parent-icon"><i class="bx bx-grid-alt"></i>
             </div>
             <div class="menu-title">Số liệu thống kê</div>
-        </a>
+        </a> -->
     </li>
 </ul>
