--- a/views/manager/addTable.ejs
+++ b/views/manager/addTable.ejs
@@ -44,7 +44,7 @@
 				</div>
 			</div>
 			<!--navigation-->
-			<%- include('navigation.ejs') -%>
+			<%- include('navigation.ejs', {id: id}) -%>
 			<!--end navigation-->
 		</div>
 		<!--end sidebar wrapper -->
