--- a/views/manager/edit_Food.ejs
+++ b/views/manager/edit_Food.ejs
@@ -44,7 +44,7 @@
 				</div>
 			</div>
 			<!--navigation-->
-			<%- include('navigation.ejs') -%>
+			<%- include('navigation.ejs', {id: id}) -%>
 			<!--end navigation-->
 		</div>
 		<!--end sidebar wrapper -->
@@ -158,7 +158,7 @@
 								  </div> -->
 								  <div class="mb-3">
 									<label for="inputProductDescription" class="form-label">Hình ảnh</label>
-									<input id="image-uploadify" type="file" accept=".xlsx,.xls,image/*,.doc,audio/*,.docx,video/*,.ppt,.pptx,.txt,.pdf" value="<%=food.image_url[0]%>" multiple>
+									<input id="image-uploadify" type="file" accept=".xlsx,.xls,image/*,.doc,audio/*,.docx,video/*,.ppt,.pptx,.txt,.pdf"  multiple>
 								  </div>
 								</div>
 							   </div>
