--- a/views/manager/tableList.ejs
+++ b/views/manager/tableList.ejs
@@ -39,7 +39,7 @@
 				</div>
 			</div>
 			<!--navigation-->
-			<%- include('navigation.ejs') -%>
+			<%- include('navigation.ejs', {id: id}) -%>
 			<!--end navigation-->
 		</div>
 		<!--end sidebar wrapper -->
