--- a/views/home/register.ejs
+++ b/views/home/register.ejs
@@ -43,7 +43,7 @@
             </div>
             <button class="form-button" type="submit">Tiếp tục</button>
             <p class="form-text">
-                <a href="#" class="form-link" id="linkLogin">Bạn đã có tài khoản? Đăng nhập</a>
+                <a href="/home/login" class="form-link" id="linkLogin">Bạn đã có tài khoản? Đăng nhập</a>
             </p>
         </form>
     </div>
