--- a/views/home/restaurants.ejs
+++ b/views/home/restaurants.ejs
@@ -19,6 +19,63 @@
                             <li><a href="index.html">Trang chủ</a></li>
                             <li>Danh sách món ăn</li>
                         </ul>
+                        <a class="btn btn-primary" data-bs-toggle="modal" href="#reserveDialoog" role="button">Đặt bàn</a>
+                        <form method="post" class="modal fade" id="reserveDialoog" aria-hidden="true" aria-labelledby="reserveDialoog" tabindex="-1">
+                            <div class="modal-dialog modal-dialog-centered">
+                              <div class="modal-content">
+                                <div class="modal-header">
+                                  <h5 class="modal-title">Đặt bàn & Đặt tiệc</h5>
+                                  <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
+                                </div>
+                                <div class="modal-body">
+                                    <input type="text" name="id" value="<%= restaurant._id %>" hidden required>
+                                    <div class="mb-3 text-start">
+                                        <label class="form-label">Tên người nhận bàn</label>
+                                        <input type="text" placeholder="Vui lòng nhập tên người nhận"  class="form-control" name="customer_name" onkeyup="this.value = this.value.replace(/(^\w{1})|(\s+\w{1})/g, letter => letter.toUpperCase());" required>
+                                    </div>
+                                    
+                                    <select class="mb-3 form-select" name="table" required>
+                                        <option value="">---Loại bàn---</option>
+                                        <% tables.forEach(
+                                        (element, index ) => {%>
+                                        <option value="<%=element._id%>"><%=element.name.replace(/(^\w{1})|(\s+\w{1})/g, letter => letter.toUpperCase());%></option>
+                                        <%  })%>
+
+                                    </select>
+                                   
+                                    <div class="mb-3 text-start">
+                                        <label class="form-label">Số lượng bàn:</label>
+                                        <input type="number"  class="form-control" placeholder="Vui lòng nhập số lượng bàn" name="quantity" min="1" max="20" required>
+                                    </div> 
+                                    <select class="mb-3 form-select" name="typeOfParty" required>
+                                        <option value="">---Loại tiệc---</option>
+                                        <% typesOfParty.forEach(
+                                        (element, index ) => {%>
+                                        <option value="<%=element._id%>"><%=element.name.replace(/(^\w{1})|(\s+\w{1})/g, letter => letter.toUpperCase());%></option>
+                                        <% })%>
+
+                                    </select>
+                                   
+                                    <div class="mb-3 text-start">
+                                        <label class="form-label ">Ngày nhận</label>
+                                        <input type="date" class="form-control" placeholder="Vui lòng nhập ngày nhận"  name="received_date" min="1" max="20" required>
+                                    </div>
+                                    <div class="mb-3 text-start">
+                                        <label class="form-label text-start">Số điện thoại khách hàng</label>
+                                        <input type="tel" class="form-control" placeholder="Vui lòng nhập SĐT"  name="customer_phone" min="1" max="20" required>
+                                    </div>
+                                    <div class="mb-3 text-start">
+                                        <label class="form-label text-start">Địa chỉ khách hàng</label>
+                                        <input type="tel" class="form-control" placeholder="Vui lòng nhập địa chỉ khách hàng" name="customer_address" min="1" max="20" required >
+                                    </div>
+                                </div>
+                                <div class="modal-footer">
+                                  <button type="submit" class="btn btn-primary">Xác nhận</button>
+                                </div>
+                              </div>
+                            </div>
+                          </form>
+                          <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM" crossorigin="anonymous"></script>
                     </div>
                 </div>
             </div>
@@ -127,19 +184,19 @@
                             <div class="swiper-container">
                                 <div class="swiper-wrapper">
                                     <a class="swiper-slide" href="#">
-                                        <img class="w-100" src="images/products/large-product/1.png" alt="Product">
+                                        <img class="w-100" src="/images/products/large-product/1.png" alt="Product">
                                     </a>
                                     <a class="swiper-slide" href="#">
-                                        <img class="w-100" src="images/products/large-product/2.png" alt="Product">
+                                        <img class="w-100" src="/images/products/large-product/2.png" alt="Product">
                                     </a>
                                     <a class="swiper-slide" href="#">
-                                        <img class="w-100" src="images/products/large-product/3.png" alt="Product">
+                                        <img class="w-100" src="/images/products/large-product/3.png" alt="Product">
                                     </a>
                                     <a class="swiper-slide" href="#">
-                                        <img class="w-100" src="images/products/large-product/4.png" alt="Product">
+                                        <img class="w-100" src="/images/products/large-product/4.png" alt="Product">
                                     </a>
                                     <a class="swiper-slide" href="#">
-                                        <img class="w-100" src="images/products/large-product/5.png" alt="Product">
+                                        <img class="w-100" src="/images/products/large-product/5.png" alt="Product">
                                     </a>
                                 </div>
 
@@ -241,7 +298,7 @@
                             <div class="payment-option m-t-20 d-flex justify-content-start">
                                 <span><strong>Payment: </strong></span>
                                 <a href="#">
-                                    <img class="fit-image m-l-5" src="images/payment/payment_large.png" alt="Payment Option Image">
+                                    <img class="fit-image m-l-5" src="/images/payment/payment_large.png" alt="Payment Option Image">
                                 </a>
                             </div>
                             <!-- Payment Option End -->
@@ -320,11 +377,11 @@
         <!-- Mobile Menu Inner End -->
     </div>
     
-    <script src="js/vendor.min.js"></script>
-    <script src="js/plugins.min.js"></script>
+    <script src="/js/vendor.min.js"></script>
+    <script src="/js/plugins.min.js"></script>
 
     <!--Main JS-->
-    <script src="js/main.js"></script>
+    <script src="/js/main.js"></script>
 </body>
 
 </html>
